@@ -59,3 +59,4 @@ Module:pinorder4  Kwd:module  File:verilog/pinorder.v
     Pin:y  Net:b_i
               Port:y  Dir:in  DataT:  Array:
               Net:b_i  IO  DeclT:net  NetT:wire  DataT:  Array:
+  ContAssign:assign  lhs:b_i  rhs0
